nova_tests/negative_capability/trailing_block_legacy_params_rejected.nv
// EXPECT_COMPILE_ERROR unexpected `=>`
//
// Plan 19 D43-rev (C13): старая форма `f(args) { x => body }`
// с параметрами через `=>` внутри trailing-block отменена.
// Используется `f(args) fn(x int) -> R body` (trailing-fn).
//
// Парсер trailing-block теперь не принимает `params =>`,
// `x => x + 1` внутри block intepretируется как expression и
// упирается в `=>`, что в expression-position запрещено.

module nova_tests.negative_capability.trailing_block_legacy_params_rejected

fn dummy(p fn(int) -> int) -> int => p(0)

test "legacy `f() { x => body }` rejected" {
    let r = dummy() { x => x + 1 }
    assert(r == 1)
}
